--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,4 @@ bincode = "1"
 [dependencies.rocket_contrib]
 git = "https://github.com/SergioBenitez/Rocket.git"
 rev = "1f1f44f336e5a172361fc1860461bb03667b1ed2"
-features = ["tera_templates"]
+features = ["tera_templates", "uuid"]
