--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "1f1f44f336e5a172361fc1860461bb03667b1ed2" }
 sled = "0.34"
-uuid = { version = "0.8", features = ["serde", "v4"] }
+# uuid = { version = "0.8", features = ["serde", "v4"] }
 thiserror = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -18,8 +18,9 @@ rust-argon2 = "0.8"
 rand = "0.8"
 bincode = "1"
 pulldown-cmark = "0.8"
+itertools = "0.9"
 
 [dependencies.rocket_contrib]
 git = "https://github.com/SergioBenitez/Rocket.git"
 rev = "1f1f44f336e5a172361fc1860461bb03667b1ed2"
-features = ["tera_templates", "uuid"]
+features = ["tera_templates"]
