--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,7 +1,7 @@
 [default]
 port = 8080
 template_dir = "templates"
-site_name = "Alpakistan Wiki"
+site_name = "Simple Wiki"
 
 [debug]
 address = "127.0.0.1"
