--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "407e346a6a32da548f8e31d2f684061565467d06" }
+rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
 sled = "0.34"
 thiserror = "1"
 serde = { version = "1", features = ["derive"] }
@@ -23,13 +23,13 @@ captcha = "0.0.8"
 uuid = { version = "*", features = ["v4"] }
 zeroize = "1"
 base64 = "0.13"
-tantivy = { git = "https://github.com/tantivy-search/tantivy.git", branch = "main" }
+tantivy = "0.14"
 dashmap = "4"
 parking_lot = "0.11"
 
 [dependencies.rocket_contrib]
 git = "https://github.com/SergioBenitez/Rocket.git"
-rev = "407e346a6a32da548f8e31d2f684061565467d06"
+branch = "master"
 features = ["tera_templates", "uuid"]
 
 [dev-dependencies]
